--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -161,7 +161,7 @@ Our implementation of the erosion rate follows one of the approaches taken in \c
 \end{equation}
 
 \noindent
-$k_{e}$ is a proportionality constant ((m/yr)$^{1-m}$) and $m$ and $n$ are adjustable exponents that are kept as 0.5 and 1 as in \citet{Maffre2018a}. This formulation is directly inspired from the stream power law \citep{Davy2000a}. This law and these exponent values are supported by various compilations (e.g. \citealp{Lague2013a}) although \citet{Lague2013a} also suggests that there is variability in the proportionality constant that is difficult to capture at a global scale.
+$k_{e}$ is a proportionality constant ((m/yr)$^{1-m}$) and $m$ and $n$ are adjustable exponents that are kept as 0.5 and 1 as in \citet{Maffre2018a}. This formulation is directly inspired by the stream power law \citep{Davy2000a}. This formulation and these exponent values are supported by various compilations (e.g. \citealp{Lague2013a}) although \citet{Lague2013a} also suggests that there is variability in the proportionality constant that is difficult to capture at a global scale.
 
 The $K$ in the dissolution rate constant in Equation \ref{eq:2} describes the dependence of the chemical weathering on climate:
 
@@ -255,7 +255,7 @@ The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/weathering_regolith_maps.jpg}
-    \caption{Chemical weathering and regolith thickness maps associated with the GEOCLIM model run using the parameter combination that produced that highest $r^{2}$ (Fig. \ref{fig:r2_cross_plot}B). Parameter values used for this model run are: $k_{d}=5\times10^{-4}$, $k_{w}=1$, $\sigma=-0.4$, $k_{rp}=1\times10^{-2}$, metamorphic$_{Ca+Mg}=2500$~mol/m$^{3}$, sediment$_{Ca+Mg}=2000$~mol/m$^{3}$.}
+    \caption{Chemical weathering and regolith thickness maps associated with the GEOCLIM model run using the parameter combination that produced the highest $r^{2}$ (Fig. \ref{fig:r2_cross_plot}B). Parameter values used for this model run are: $k_{d}=5\times10^{-4}$, $k_{w}=1$, $\sigma=-0.4$, $k_{rp}=1\times10^{-2}$, metamorphic$_{Ca+Mg}=2500$~mol/m$^{3}$, sediment$_{Ca+Mg}=2000$~mol/m$^{3}$.}
     \label{fig:weathering_regolith_maps}
 \end{figure}
 
@@ -290,7 +290,7 @@ Within the equations that govern the silicate weathering component of GEOCLIM, w
 \end{center}
 \end{table}
 
-We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff (UNH/GRDC Composite Runoff Fields V1.0; \citealp{Fekete1999a}), temperature (CRU TS v.4.03; \citealp{Harris2013a}), and slope (Shuttle Radar Topography Mission; \citealp{Farr2007a}) fields. As described in the main text, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin (HYBAM network) in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. Those lasts are nested watersheds, which means we have to subtract upstream weathering fluxes from downstream fluxes. Watersheds for which this subtraction yields an aberrant value are not considered. 80 watersheds in total are used in this study. We calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins:
+We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff (UNH/GRDC Composite Runoff Fields V1.0; \citealp{Fekete1999a}), temperature (CRU TS v.4.03; \citealp{Harris2013a}), and slope (Shuttle Radar Topography Mission; \citealp{Farr2007a}) fields. As described in the main text, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin (HYBAM network) in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. The latter are nested watersheds, which requires upstream weathering fluxes to be subtracted from downstream fluxes. Watersheds for which this subtraction yields an aberrant value are not considered. 80 watersheds in total are used in this study. We calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins:
 
 \begin{equation}
     r^{2} = 1 - \frac{\sum\left[ \log_{10}(M_{i}) - \log_{10}(O_{i}) \right]^{2}}{\sum\left[ \log_{10}(O_{i}) - \overline{\log_{10}(O)} \right]^{2}}
@@ -303,6 +303,7 @@ $M_{i}$ is the modeled \COtwo consumption over watershed $i$, $O_{i}$ is the obs
 The majority of the original 78,000 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using Equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}<0.4$, which leaves 3,339 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
 
 Global CO$_{2}$ consumption calculated from these 3,339 parameter combinations ranges from 2.7$\times10^{12}$~mol/yr to 7.1$\times10^{12}$~mol/yr, with a mean of 5.4$\times10^{12}$~mol/yr. These estimates fall within the range of those independently estimated in the literature for the present-day: the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a} is 3.0--10.0$\times10^{12}$~mol/yr, with the preferred range of those estimates being 3.4--5.9$\times10^{12}$~mol/yr (Fig. \ref{fig:W_vs_r2}B).
+
 Each parameter combination predicts a different total \COtwo consumption that should match the \COtwo degassing at steady-state. Hence, in the GEOCLIM experiments, each parameter combination is used with its corresponding steady-state \COtwo degassing. In these estimates we are not including the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
 
 \section*{Climate Model}
@@ -321,11 +322,11 @@ We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/scenario_pCO2_all.pdf}
-    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the ten scenarios, each point represents an estimate from one of the 3,339 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched \COtwo consumption estimated from watershed data (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to 1.5$\times$ the interquartile range, or to the minimum/maximum of the estimates if no estimates are below/above this range.}
+    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the ten scenarios, each point represents an estimate from one of the 3,339 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched \COtwo consumption estimated from watershed data (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to 1.5$\times$ the interquartile range, or to the minimum/maximum of the estimates if no estimates are below/above this range. The only difference with Fig. X in the main text....}
     \label{fig:scenario_pCO2_all}
 \end{figure}
 
-We use geological data to quantify the changes in the area of I\&NG over the past 20~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed I\&NG'' scenario (Fig. \ref{fig:ING_fracs}), we remove all land associated with arc-continent collision in I\&NG. To generate the lithologic map used in the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:ING_fracs}), we take the estimated paleoshorelines of I\&NG for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of I\&NG for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order. We then add land that is not exposed today (i.e. the Sunda Shelf). However, the assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0038~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf.  For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation.
+We use geological data to quantify the changes in the area of I\&NG over the past 20~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed I\&NG'' scenario (Fig. \ref{fig:ING_fracs}), we remove all land associated with arc-continent collision in I\&NG. To generate the lithologic map used in the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:ING_fracs}), we take the estimated paleoshorelines of I\&NG for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of I\&NG for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. XXX). We then add land that is not exposed today (i.e. the Sunda Shelf). However, the assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0038~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf.  For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation.
 
 To explore the sensitivity of our results to the inclusion of the Sunda Shelf, we also tested ``reduced I\&NG'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``reduced I\&NG + Sunda Shelf'' scenarios without the addition of the Sunda Shelf. We find that the estimated steady state \pCOtwo's for the ``reduced I\&NG'' scenarios are only marginally higher than those of the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are relatively insensitive to the inclusion of the Sunda Shelf. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the shelf.
 
