--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -72,7 +72,7 @@
 \begin{document}
 
 \begin{flushleft}
-{\Large \textbf{Supplementary Information for ``Emergence of Indonesia and New Guinea as a driver for Neogene cooling''}}
+{\Large \textbf{Supplementary Information for ``Emergence of the SE Asian islands as a driver for Neogene cooling''}}
 
 Yuem Park\textsuperscript{1},
 Pierre Maffre\textsuperscript{1},
@@ -234,21 +234,21 @@ We restricted the calculation of the weathering fluxes to the flux of dissolved 
 
 The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). To improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel covered by each of the 6 lithologic categories (or water/ice) is captured by the extra dimension. In this way, we calculate an area-weighted mean Mg+Ca concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
 
-The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/m$^{3}$), and mafic (10,317~mol/m$^{3}$) lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}; calculations made in the code with the repository). For metamorphic and siliciclastic lithologies, we explore a range of feasible Ca+Mg concentrations during calibration of the silicate weathering component of GEOCLIM (\textit{GEOCLIM Calibration}).
+The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/m$^{3}$), and mafic (10,317~mol/m$^{3}$) lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}; calculations made in the code within the repository). For metamorphic and siliciclastic lithologies, we explore a range of feasible Ca+Mg concentrations during calibration of the silicate weathering component of GEOCLIM (\textit{GEOCLIM Calibration}).
 
 \section*{GEOCLIM Calibration}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/W_vs_r2.jpg}
-    \caption{\textbf{A)} Modeled global \COtwo consumption vs. the coefficient of determination ($r^{2}$) between modeled and data-constrained \COtwo consumption in each of the watersheds. Each point represents model output using one of the 78,000 parameter combinations. \textbf{B)} Same as A, but zoomed to the plotting space with positive coefficient of determination values. The black line represents the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a}. The black box represents the preferred range of these estimates preferred by \citet{Gerlach2011a}.}
+    \caption{\textbf{A)} Modeled global \COtwo consumption vs. the coefficient of determination ($r^{2}$) between modeled and data-constrained \COtwo consumption in each of the watersheds. Each point represents model output using one of the 93,600 parameter combinations. \textbf{B)} Same as A, but zoomed to the plotting space with positive coefficient of determination values. The black line represents the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a}. The black box represents the range of these estimates preferred by \citet{Gerlach2011a}.}
     \label{fig:W_vs_r2}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/r2_cross_plot.pdf}
-    \caption{Modeled vs. data-constrained \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 3,339 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day. Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 3,339 parameters combinations. The red dashed line is the 1:1 line, the blue dashed line is the 2:1 line, and the cyan dashed lines are the 5:1 and 10:1 lines. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$. The chemical weathering and regolith thickness maps of this parameter combination are shown in Figure \ref{fig:weathering_regolith_maps}.}
+    \caption{Modeled vs. data-constrained \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 5,381 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day. Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 5,381 parameters combinations. The red dashed line is the 1:1 line, the blue dashed line is the 2:1 line, and the cyan dashed lines are the 5:1 and 10:1 lines. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$. The chemical weathering and regolith thickness maps of this parameter combination are shown in Figure \ref{fig:weathering_regolith_maps}.}
     \label{fig:r2_cross_plot}
 \end{figure}
 
@@ -277,7 +277,7 @@ Within the equations that govern the silicate weathering component of GEOCLIM, w
     5$\times$10$^{-5}$ & 5$\times$10$^{-3}$ & -0.1 & 3$\times$10$^{-3}$ & 2500 & 1500 \\
     1$\times$10$^{-4}$ & 1$\times$10$^{-2}$ & 0 & 5$\times$10$^{-3}$ & 3000 & 2000 \\
     2$\times$10$^{-4}$ & 2$\times$10$^{-2}$ & 0.1 & 1$\times$10$^{-2}$ & 3500 & 2500 \\
-    5$\times$10$^{-4}$ & 5$\times$10$^{-2}$ & 0.3 &  & 4000 & 3000 \\
+    5$\times$10$^{-4}$ & 5$\times$10$^{-2}$ & 0.3 & 1.5$\times$10$^{-2}$ & 4000 & 3000 \\
     1$\times$10$^{-3}$ & 1$\times$10$^{-1}$ &  &  &  &  \\
     2$\times$10$^{-3}$ & 2$\times$10$^{-1}$ &  &  &  &  \\
     5$\times$10$^{-3}$ & 5$\times$10$^{-1}$ &  &  &  &  \\
@@ -285,7 +285,7 @@ Within the equations that govern the silicate weathering component of GEOCLIM, w
     \end{tabular}
 }
 \vspace{10pt}
-\caption{Values tested for poorly constrained parameters in the silicate weathering component of GEOCLIM. Every permutation of the listed values were tested (except those permutations where the Ca+Mg concentration of the sediments are higher than that of the metamorphics), resulting in 78,000 unique parameter combinations.}
+\caption{Values tested for poorly constrained parameters in the silicate weathering component of GEOCLIM. Every permutation of the listed values were tested (except those permutations where the Ca+Mg concentration of the sediments are higher than that of the metamorphics), resulting in 93,600 unique parameter combinations.}
 \label{tab:parameter_combinations}
 \end{center}
 \end{table}
@@ -300,37 +300,44 @@ We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg flux
 \noindent
 $M_{i}$ is the modeled \COtwo consumption over watershed $i$, $O_{i}$ is the observed \COtwo consumption over watershed $i$, and $\overline{\log_{10}(O)}$ is the mean of the log of observed \COtwo consumption over all watersheds.
 
-The majority of the original 78,000 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using Equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}<0.4$, which leaves 3,339 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
+The majority of the original 93,600 parameter combinations produce \COtwo consumption maps with poor fits to the measured watershed data (Fig. \ref{fig:W_vs_r2}). Given that the coefficient of determination ($r^{2}$) is calculated using Equation \ref{eq:10} rather than fitting a linear model, many of the combinations associated with particularly poor fits result in negative $r^{2}$ values (Fig. \ref{fig:W_vs_r2}). However, given the right permutation of parameters, GEOCLIM produces \COtwo consumption maps that fit the measured watershed data reasonably well. We therefore eliminate all parameter combinations that produce a $r^{2}<0.4$, which leaves 5,381 unique parameter combinations (Figs. \ref{fig:W_vs_r2} and \ref{fig:r2_cross_plot}).
 
-Global CO$_{2}$ consumption calculated from these 3,339 parameter combinations ranges from 2.7$\times10^{12}$~mol/yr to 7.1$\times10^{12}$~mol/yr, with a mean of 5.4$\times10^{12}$~mol/yr. These estimates fall within the range of those independently estimated in the literature for the present-day: the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a} is 3.0--10.0$\times10^{12}$~mol/yr, with the preferred range of those estimates being 3.4--5.9$\times10^{12}$~mol/yr (Fig. \ref{fig:W_vs_r2}B).
+Global CO$_{2}$ consumption calculated from these 5,381 parameter combinations ranges from 2.9$\times10^{12}$~mol/yr to 7.7$\times10^{12}$~mol/yr, with a mean of 5.7$\times10^{12}$~mol/yr. These estimates fall within the range of those independently estimated in the literature for the present-day: the full range of estimates of the present-day non-anthropogenic global CO$_{2}$ emission rate compiled in \citet{Gerlach2011a} is 3.0--10.0$\times10^{12}$~mol/yr, with the preferred range of those estimates being 3.4--5.9$\times10^{12}$~mol/yr (Fig. \ref{fig:W_vs_r2}B).
 
 Each parameter combination predicts a different total \COtwo consumption that should match the \COtwo degassing at steady-state. Hence, in the GEOCLIM experiments, each parameter combination is used with its corresponding steady-state \COtwo degassing. In these estimates we are not including the effects of reverse weathering \citep{Michalopoulos1995a} as it is not clear how it should be parameterized and it is interpreted to be a relatively minor flux in the Cenozoic \citep{Isson2018a}. Formation of authigenic clays that scales with Ca and Mg concentration of riverine waters could decrease the \COtwo consumption associated with silicate weathering although the overall trend seen in this study would remain.
 
 \section*{Climate Model}
 
-We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results. Given that precipitation in this region is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for I\&NG. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
+We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results. Given that precipitation in this region is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for SEAI. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
 
-\section*{Indonesia and New Guinea Scenarios}
+\section*{SE Asian Islands Scenarios}
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=1\textwidth]{Manuscript/Figures/ING_fracs.jpg}
-    \caption{0.5\degrees $\times$ 0.5\degrees lithologic maps of Indonesia and New Guinea (I\&NG) used to force GEOCLIM. Only the 15~Ma scenarios are shown here, but the 10 and 5~Ma scenarios would be similar, using the 10 and 5~Ma shorelines shown in Figure 1 of the main text instead. Each column represents a tested scenario. Each row represents a lithologic category. Solid black lines show present-day shorelines.}
-    \label{fig:ING_fracs}
+    \includegraphics[width=1\textwidth]{Manuscript/Figures/SEAI_fracs.jpg}
+    \caption{0.5\degrees $\times$ 0.5\degrees lithologic maps of the SE Asian islands (SEAI) used to force GEOCLIM. Only the 15~Ma scenarios are shown here, but the 10 and 5~Ma scenarios would be similar, using the 10 and 5~Ma shorelines shown in Figure 1 of the main text instead. Each column represents a tested scenario. Each row represents a lithologic category. Solid black lines show present-day shorelines.}
+    \label{fig:SEAI_fracs}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/scenario_pCO2_all.pdf}
-    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the ten scenarios, each point represents an estimate from one of the 3,339 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched \COtwo consumption estimated from watershed data (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to 1.5$\times$ the interquartile range, or to the minimum/maximum of the estimates if no estimates are below/above this range. The only difference with Fig. X in the main text....}
+    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the ten scenarios, each point represents an estimate from one of the 5,381 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched \COtwo consumption estimated from watershed data (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to the 2.5 and 97.5 percentile values. This figure is identical to Figure 2 in the main text, with the additional scenarios used to test the sensitivity of the results to the inclusion of Greenland and the Sunda Shelf.}
     \label{fig:scenario_pCO2_all}
 \end{figure}
 
-We use geological data to quantify the changes in the area of I\&NG over the past 20~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed I\&NG'' scenario (Fig. \ref{fig:ING_fracs}), we remove all land associated with arc-continent collision in I\&NG. To generate the lithologic map used in the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:ING_fracs}), we take the estimated paleoshorelines of I\&NG for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of I\&NG for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. XXX). We then add land that is not exposed today (i.e. the Sunda Shelf). However, the assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0038~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf.  For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation.
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.5\textwidth]{Manuscript/Figures/paleogeographic_reconstructions.pdf}
+    \caption{Paleogeographically-reconstructed paleoshorelines for SEAI at 5, 10, and 15~Ma, using the paleogeographic model of \citet{Matthews2016a}.}
+    \label{fig:paleogeographic_reconstructions}
+\end{figure}
 
-To explore the sensitivity of our results to the inclusion of the Sunda Shelf, we also tested ``reduced I\&NG'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``reduced I\&NG + Sunda Shelf'' scenarios without the addition of the Sunda Shelf. We find that the estimated steady state \pCOtwo's for the ``reduced I\&NG'' scenarios are only marginally higher than those of the ``reduced I\&NG + Sunda Shelf'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are relatively insensitive to the inclusion of the Sunda Shelf. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the shelf.
+We use geological data to quantify the changes in the area of SEAI over the past 20~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed SEAI'' scenario (Fig. \ref{fig:SEAI_fracs}), we remove all land associated with arc-continent collision in SEAI. To generate the lithologic map used in the ``reduced SEAI + Sunda Shelf'' scenarios (Fig. \ref{fig:SEAI_fracs}), we take the estimated paleoshorelines of SEAI for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of SEAI for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. \ref{fig:paleogeographic_reconstructions}). We then add land that is not exposed today (i.e. the Sunda Shelf). However, the assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0038~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf.  For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation.
 
-The decrease in \pCOtwo that we estimate associated with the emergence of I\&NG since 5~Ma ($\sim$120~ppm) is greater than that proposed in \citet{Molnar2015a} ($\sim$19~ppm). This 19~ppm value in \citet{Molnar2015a} is obtained from an equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor $\alpha$ that is intended to account for the influence of both runoff and temperature (Equation 3 in \citealp{Molnar2015a}). \pCOtwo is then estimated from $T$ using a simple energy balance equation. However, as discussed in the main text, as \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo. The linear relationship used in \citet{Molnar2015a} ignores these feedbacks in the global climate system.
+To explore the sensitivity of our results to the inclusion of the Sunda Shelf, we also tested ``reduced SEAI'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``reduced SEAI + Sunda Shelf'' scenarios without the addition of the Sunda Shelf. We find that the estimated steady state \pCOtwo's for the ``reduced SEAI'' scenarios are only marginally higher than those of the ``reduced SEAI + Sunda Shelf'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are relatively insensitive to the inclusion of the Sunda Shelf. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the shelf.
+
+The decrease in \pCOtwo that we estimate associated with the emergence of SEAI since 5~Ma ($\sim$120~ppm) is greater than that proposed in \citet{Molnar2015a} ($\sim$19~ppm). This 19~ppm value in \citet{Molnar2015a} is obtained from an equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor $\alpha$ that is intended to account for the influence of both runoff and temperature (Equation 3 in \citealp{Molnar2015a}). \pCOtwo is then estimated from $T$ using a simple energy balance equation. However, as discussed in the main text, as \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo. The linear relationship used in \citet{Molnar2015a} ignores these feedbacks in the global climate system.
 
 \begin{figure}[h!]
     \centering
@@ -343,7 +350,7 @@ Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:
 
 \section*{Paleoshoreline Reconstruction and Geological Synthesis}
 
-Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in I\&NG. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$ (Fig. 1 in main text). We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries (i.e. Early Miocene = 23--16~Ma, Middle Miocene = 15.99--11.61~Ma, Late Miocene = 11.6--5.4~Ma, Pliocene =5.39--3.8 Ma) but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
+Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in SEAI. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$ (Fig. 1 in main text). We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries (i.e. Early Miocene = 23--16~Ma, Middle Miocene = 15.99--11.61~Ma, Late Miocene = 11.6--5.4~Ma, Pliocene =5.39--3.8 Ma) but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
 
 Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a}, and in New Guinea, we followed \citet{Gold2017a} and \cite{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5~Ma by \citet{Molnar2015a} our calculated area is comparable. 
 
