Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -100,19 +100,19 @@ Nicholas L. Swanson-Hysell\textsuperscript{1}
 
 The SE Asian islands (SEAI) have an out-sized contribution on modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a, Hartmann2009a, Milliman2013a, Hartmann2014a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Hall2017a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Shackleton1984a, Zachos2001a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1988a}. Here we use geologic data to reconstruct the shorelines of SEAI over the past 15~m.y. (Fig. \ref{fig:shoreline_growth}) and quantify the increase in land area. We use these paleoshorelines as boundary conditions within a coupled weathering-climate model to quantify the change in steady-state \pCOtwo associated with this emergence (Fig. \ref{fig:scenario_pCO2}). We find that the modeled decrease in \pCOtwo due to these paleogeographic changes is sufficient to explain long-term climatic cooling over the Neogene.
 
-Over geologic time-scales, \COtwo enters Earth's ocean--atmosphere system primarily via volcanism and metamorphic degassing, and leaves primarily through the chemical weathering of silicate rocks, which delivers alkalinity and cations to the ocean that sequester carbon via the precipitation of carbonate sediment, with a smaller sink through organic carbon burial \cite{Kump2000a}. Steady-state \pCOtwo is set at the \pCOtwo level at which \COtwo sinks are equal to sources. As \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo. Conversely, the magnitude of the \COtwo sink can be equal to the magnitude of the source at lower \pCOtwo when global weatherability is high \cite{Kump1997a}.
+Over geologic time-scales, \COtwo enters Earth's ocean--atmosphere system primarily via volcanism and metamorphic degassing, and leaves primarily through the chemical weathering of silicate rocks, with a smaller sink through organic carbon burial \cite{Kump2000a}. Chemcal weathering delivers alkalinity and cations to the ocean which drives carbon sequestration through carbonate precipitation. Steady-state \pCOtwo is set at the \pCOtwo level at which \COtwo sinks are equal to sources. As \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo, and vice versa \cite{Kump1997a}.
 
-Topography, climate, and lithology all modulate chemical weathering. In contrast to regions of high denudation, in low-relief regions low erosion rates lead to supply-limited weathering regimes \cite{Gabet2009a, West2012a, Maher2014a}. In warm and wet regions, mineral dissolution occurs more readily leading to enhanced chemical weathering \cite{Lasaga1994a, West2012a}. Regions with high physical weathering rates that are not supply-limited are more sensitive to changes in climate that can reduce or enhance chemical weathering \cite{West2012a, Maher2014a}. In terms of lithology, mafic rocks have the potential to sequester more carbon through silicate weathering because of their relatively high Ca and Mg concentrations \cite{Dessert2003a}. These factors have lead to the proposal that arc-continent collisions within the tropical rain belt have been important in enhancing global weatherability, lowering atmospheric \pCOtwo, and initiating glacial climate over the past 520~m.y. \cite{Jagoutz2016a, Swanson-Hysell2017a, Macdonald2019a} and perhaps in the Neoproterozoic as well \cite{Park2019b}.
+Topography, climate, and lithology all effect chemical weathering. High-relief regions lead to reaction-limited weathering regimes that are more sensitive to climate change \cite{Gabet2009a, West2012a, Maher2014a}. In warm and wet regions, mineral dissolution kinetics are faster leading to enhanced chemical weathering \cite{Lasaga1994a, West2012a}. Additionally, mafic rocks have higher Ca and Mg concentrations and dissolution rates than felsic rocks, and thus the potential to more efficiently sequester carbon through silicate weathering \cite{Dessert2003a}. These factors have lead to the proposal that arc-continent collisions within the tropical rain belt have been important in enhancing global weatherability, lowering atmospheric \pCOtwo, and initiating glacial climate over the past 520~m.y. \cite{Jagoutz2016a, Swanson-Hysell2017a, Macdonald2019a} and perhaps in the Neoproterozoic as well \cite{Park2019b}.
 
 To estimate the decrease in steady-state \pCOtwo associated with the increase of subaerially-exposed land area of SEAI and enhanced global weatherability, we use the spatially-resolved GEOCLIM model \cite{Godderis2014a, Godderis2017c}. GEOCLIM consists of a silicate weathering model linked to climate model runs at different \pCOtwo levels, allowing for estimates of long-term steady-state \pCOtwo associated with coupled changes in weathering sinks and climatology.
 
-The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for each continental grid cell. In previous versions of the model, silicate weathering was a function of temperature and runoff only, and bedrock in all continental grid cells had identical chemical compositions \cite{Godderis2014a}. More recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component, which introduces a dependence on erosion (and then topographic slope, see SI) \cite{Gabet2009a, West2012a}. While this introduction of regolith development into GEOCLIM is important for assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM. The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) \cite{Hartmann2012a} and is represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (see SI). Each continental grid cell is assigned these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo is conservative. The weathering of carbonate does not contribute to long-term \COtwo consumption and its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. We explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies during calibration of the silicate weathering component.
+The silicate weathering component of GEOCLIM calculates \COtwo consumption resulting from silicate weathering for each continental grid cell. In previous versions of the model, silicate weathering was a function of temperature and runoff only, and bedrock in all continental grid cells had identical chemical compositions \cite{Godderis2014a}. More recent versions of GEOCLIM implement regolith development and soil shielding into the silicate weathering component, which introduces a dependence on erosion (and therefore topographic slope, see SI) \cite{Gabet2009a, West2012a}. While this introduction of regolith development into GEOCLIM is important for assessing the impact of tropical arc-continent collisions on \pCOtwo, the relatively high Ca+Mg concentration in arc rocks relative to other lithologies must also be considered. We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM. The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) \cite{Hartmann2012a} and is represented by 6 categories: metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment (see SI). Each continental grid cell is assigned these lithologic categories at a resolution of 0.1\degrees $\times$ 0.1\degrees. The Ca+Mg concentrations of felsic, intermediate, and mafic lithologies are assigned based on the mean of data compiled from EarthChem (\url{www.earthchem.org/portal}). Given that GLiM does not distinguish ultramafic lithologies, such rocks are grouped with mafic rocks. As a result, the Ca+Mg concentration is likely an underestimate in regions of obducted ophiolites, such that the estimated effect of these regions on changing steady-state \pCOtwo is conservative. The weathering of carbonate does not contribute to long-term \COtwo consumption and its Ca+Mg concentration is ignored. The Ca+Mg concentrations of metamorphic and siliciclastic sediment grid cells are more difficult to define, since their chemical composition is strongly dependent on protolith composition and, in the case of siliciclastic sediment, the degree of previous chemical depletion. We explore a range of feasible Ca+Mg concentrations of metamorphic and siliciclastic sediment lithologies during calibration of the silicate weathering component.
 
 The values of four parameters within the silicate weathering component \cite{Gabet2009a, West2012a, Maffre2018a} that modify the dependence of silicate weathering on temperature, runoff, and particle age are poorly constrained (see SI). Rather than prescribing values for these parameters, we allow them and metamorphic and siliciclastic Ca+Mg concentrations to vary within reasonable bounds, resulting in 93,600 unique combinations. For each combination, we compute spatially-resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 5,381 parameter combinations remain. The resulting global \COtwo consumption of these model runs all overlap with independently-derived estimates of global \COtwo outgassing flux \cite{Gerlach2011a} as they should with the long-term carbon cycle being at steady-state (see SI).
 
-Having calibrated the silicate weathering component of GEOCLIM, we use it to estimate the decrease in steady-state \pCOtwo associated with the emergence of SEAI. For the climate model component, we use temperature and runoff from a subset of the GFDL CM2.0 experiments \cite{Delworth2006b} (see SI). The primary strength of these experiments for this analysis is that all non-\COtwo forcings are held constant at values representative of pre-industrial conditions, allowing the effect of \pCOtwo to be isolated. We use terrestrial and marine sedimentary deposits to determine the position of paleoshorelines of SEAI over the past 15~m.y. and include changes in areas of presently-submerged continental shelves such as the Sunda Shelf that were previously exposed (Fig. \ref{fig:shoreline_growth}; see SI). In New Guinea, emergence in the Middle Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. associated with slab-breakoff and buoyant uplift \cite{Cloos2005a} while in eastern New Guinea, progressive jamming of the north-dipping subduction zone also caused major uplift over this time interval \cite{vanUfford2005a}. These tectonic drivers and other throughout the region lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C).
+Having calibrated the silicate weathering component of GEOCLIM, we use it to estimate the decrease in steady-state \pCOtwo associated with the emergence of SEAI. For the climate model component, we use temperature and runoff from a subset of the GFDL CM2.0 experiments \cite{Delworth2006b} (see SI). The primary strength of these experiments for this analysis is that all non-\COtwo forcings are held constant at values representative of pre-industrial conditions, allowing the effect of \pCOtwo to be isolated. We use terrestrial and marine sedimentary deposits to determine the position of paleoshorelines of SEAI over the past 15~m.y. and include changes in areas of presently-submerged continental shelves such as the Sunda Shelf that were previously exposed (Fig. \ref{fig:shoreline_growth}; see SI). The paleoshoreline data indicate that the Sunda-Banda Arc and New Guinea are primarily responsible for the increase in area since 15~Ma. Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent collision with the subducting Australian Plate \cite{Harris2006a}. Of the major islands in this arc, only Sumatra, Belitung, Bangka, Java, Bali, and Flores were subaerially exposed before 5~Ma. However, most of Sumatra and Java along with the non-volcanic islands of the Outer Banda Arc were elevated above sea level after 5~Ma, associated with slab roll-back and collision with the Australian continental margin \cite{AudleyCharles2004a, Hall2009a, Hall2013b}. In New Guinea, emergence in the Middle Miocene is associated with collision between the Melanesian Arc and Australia's distal margin \cite{vanUfford2005a, Cloos2005a, Baldwin2012a}, which drove exhumation of the 1440~km long Irian-Marum-April Ophiolite Belt. Exhumation of the New Guinea Central Range accelerated over the past 4~m.y. associated with slab-breakoff and buoyant uplift \cite{Cloos2005a} while in eastern New Guinea, progressive jamming of the north-dipping subduction zone also caused major uplift over this time interval \cite{vanUfford2005a}. These tectonic drivers and others throughout the region lead to progressive emergence over the past 15~m.y. that accelerated following 5~Ma (Fig. \ref{fig:shoreline_growth}B). This trend mirrors broad cooling over the Neogene that resulted in the initiation of Northern Hemisphere ice sheets (Fig. \ref{fig:shoreline_growth}C).
 
-We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial extent of islands in the area at ca. 15, 10, and 5~Ma (``paleo-SEAI'' scenarios; Fig. \ref{fig:scenario_pCO2}). Given that the Sunda Shelf is presently submerged, across the shelf we distribute felsic and siliciclastic lithologies and assign shallow slope values in a manner that is consistent with existing observations, and extrapolate runoff from surrounding land (see SI). While we modify the land area, the position of the tectonic blocks remain fixed since we use a climate model forced with modern geography. While there has been motion of these tectonic blocks since 15~Ma, they have remained within tropical latitudes such that this fixed scenario is a good approximation of the paleogeography (see SI). We also test an end-member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed SEAI'' scenario; Fig. \ref{fig:scenario_pCO2}).
+We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial extent of islands in the area at ca. 15, 10, and 5~Ma (``paleo-SEAI'' scenarios; Fig. \ref{fig:scenario_pCO2}). Given that the Sunda Shelf is presently submerged, across the shelf we distribute felsic and siliciclastic lithologies and assign shallow slope values in a manner that is consistent with existing observations, and extrapolate runoff from surrounding land pixels (see SI). While we modify the land area, the position of the tectonic blocks remain fixed since we use a climate model forced with modern geography. While there has been motion of these tectonic blocks since 15~Ma, they have remained within tropical latitudes such that this fixed scenario is a good approximation of the paleogeography (see SI). We also test an end-member scenario, in which all islands associated with arc-continent collision in the region are removed (``removed SEAI'' scenario; Fig. \ref{fig:scenario_pCO2}).
 
 Using the 5,381 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 493--709~ppm, 435--532~ppm, and 378--447~ppm \pCOtwo for 15, 10, and 5~Ma respectively (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$493--709~ppm. Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation \cite{Foster2017a, Mejia2017a, Ji2018a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene (see SI), indicating that the increase in subaerially-exposed land area and tectonic topography of SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
 
@@ -120,9 +120,9 @@ The results of our SEAI scenarios highlight the importance of the combination of
 
 Other hypotheses to explain ice sheet growth over the Neogene invoke changes in ocean/atmosphere circulation including: further climatic isolation of Antarctica due to strengthening of the circumpolar current \cite{Shevenell2004a}; increased atmospheric moisture in the Northern Hemisphere due to intensified thermohaline circulation following Panama Isthmus emergence \cite{Haug1998a}; and cooling of North America resulting from a strengthened Walker Circulation associated with SEAI emergence \cite{Molnar2015a}. Such changes in ocean/atmosphere circulation are likely to modulate \pCOtwo thresholds for glacial initiation and ice sheet growth \cite{DeConto2008a}. However, the prolonged timescale of the cooling trend since 15~Ma (Fig. \ref{fig:shoreline_growth}C) is most readily attributable to decreasing \pCOtwo associated with evolving geological sources and sinks of carbon, modulated by the silicate weathering feedback \cite{Walker1981a, Raymo1991a, Berner1997a, Kump1997a, Berner2001a}.
 
-Uplift in the Himalayas \cite{Raymo1988a} or a decrease in volcanic outgassing \cite{Berner1983a} have also been proposed as drivers for Neogene cooling, although recent analyses show Cenozoic seafloor spreading to be relative uniform \cite{Rowan2016a}. Rising marine \SrSr has been associated with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This increase in \SrSr since ca. 35~Ma is followed by a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalaya lithologies \cite{Myrow2015a, Colleps2018a}, but could also be partially driven by the exhumation of mafic and organic-rich forearcs sediments in SEAI during arc-continent collision.
+Himalayan uplift \cite{Raymo1988a} or a decrease in volcanic outgassing \cite{Berner1983a} have also been proposed as drivers for Neogene cooling. Rising marine \SrSr has been associated with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This increase in \SrSr since ca. 35~Ma is followed by a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalaya lithologies \cite{Quade1997a, Colleps2018a}, but could also be partially driven by the exhumation of mafic and organic-rich forearc sediments in SEAI during arc-continent collision.
 
-In addition to SEAI, paleogeographic changes elsewhere on Earth, particularly in the Himalaya and Central America, would have effected geological carbon sources and sinks. Yet, not only does the history of SEAI emergence coincide with Neogene cooling and the onset of Northern Hemisphere glaciation, but also our coupled weathering-climate model indicates that the associated \pCOtwo change is sufficient to explain the magnitude of cooling. These results highlight that the Earth's climate state is particularly sensitive to tropical paleogeography.
+Changes in volcanic outgassing and paleogeography elsewhere on Earth, particularly in the Himalaya and Central America, would have effected geological carbon sources and sinks. Yet, not only does the history of SEAI emergence coincide with Neogene cooling and the onset of Northern Hemisphere glaciation, but also our coupled weathering-climate model indicates that the associated \pCOtwo change is sufficient to explain the magnitude of cooling. These results highlight that the Earth's climate state is particularly sensitive to tropical paleogeography.
 
 %%TC:ignore
 \section*{ACKNOWLEDGEMENTS \label{sec:ACKNOWLEDGEMENTS}}
