--- a/Manuscript/Supplementary_Information/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information/Supplementary_Information.tex
@@ -106,7 +106,7 @@ These supplementary information materials provide details on the model framework
 \end{center}
 \end{SCfigure}
 
-The silicate weathering component of the GEOCLIM model has been improved compared to the previously published version \citep{Godderis2017b}. The new component implements the model of \cite{Gabet2009a} for the development of a chemically weathered profile. We refer to this chemically weathered profile as regolith where the base of the regolith is unweathered bedrock. In the model of \citet{Gabet2009a}, material enters the regolith and leaves either as a solute through chemical weathering of the material during its travel from the bedrock towards the surface, or as a physically weathered particle once it reaches the top. We use the DynSoil implementation of the \cite{Gabet2009a} model which integrates a climatic dependence on the chemical weathering that occurs within the regolith using the formulation of \cite{West2012a}. The transient time-varying version of this regolith model is described by the following system of three equations which form the core of the new DynSoil component of GEOCLIM:
+The silicate weathering component of the GEOCLIM model has been modified from the previously published version \citep{Godderis2017b}. The new component implements the model of \citet{Gabet2009a} for the development of a chemically weathered profile. We refer to this chemically weathered profile as regolith where the base of the regolith is unweathered bedrock. In the model of \citet{Gabet2009a}, material enters the regolith and leaves either as a solute through chemical weathering of the material during its travel from the bedrock towards the surface, or as a physically weathered particle once it reaches the top. We use the DynSoil implementation of the \citet{Gabet2009a} model, which integrates chemical weathering within the regolith \citep{West2012a}. The transient time-varying version of this regolith model is described by three equations:
 
 \begin{equation}
     \frac{dh}{dt} = P_{r} - E_{p}
@@ -153,7 +153,7 @@ The regolith production rate can be expressed as the product of the optimal prod
 \noindent
 $P_{0}$ is the `optimal' regolith production rate (m/yr), which is defined to be the regolith production rate when there is no overlying regolith. In Equation \ref{eq:6}, we parameterize this value using the model of \citet{Carretier2014a}, where $k_{rp}$ is a proportionality constant (unitless), $q$ is the runoff (m/yr), $E_{a}$ is the activation energy (J/K/mol), $R$ is the ideal gas constant (J/mol), $T$ is the temperature (K), and $T_{0}$ is the reference temperature (K). $f(h)$ is the soil production function (unitless), which describes how regolith production decreases as the thickness of the regolith increases. It takes an exponential form as is commonly applied in the literature (e.g. \citealp{Gabet2009a}). In Equation \ref{eq:7}, we follow \citet{Heimsath1997a}, where $d_{0}$ is a reference regolith thickness (m).
 
-Our implementation of the erosion rate follows one of the approaches taken in \citet{Godderis2017c} and \citet{Maffre2018a}, where it is parameterized based on runoff and slope ($s$; m/m):
+Our implementation of the erosion rate is parameterized based on runoff and slope ($s$; m/m):
 
 \begin{equation}
     E_{p} = k_{e}\;q^{m}\;s^{n}
@@ -161,7 +161,7 @@ Our implementation of the erosion rate follows one of the approaches taken in \c
 \end{equation}
 
 \noindent
-$k_{e}$ is a proportionality constant ((m/yr)$^{1-m}$) and $m$ and $n$ are adjustable exponents that are kept as 0.5 and 1 as in \citet{Maffre2018a}. This formulation is directly inspired by the stream power law \citep{Davy2000a}. This formulation and these exponent values are supported by various compilations (e.g. \citealp{Lague2013a}) although \citet{Lague2013a} also suggests that there is variability in the proportionality constant that is difficult to capture at a global scale.
+$k_{e}$ is a proportionality constant ((m/yr)$^{1-m}$) and $m$ and $n$ are adjustable exponents that are kept as 0.5 and 1 \citep{Maffre2018a}. This formulation is directly inspired by the stream power law \citep{Davy2000a}. This formulation and these exponent values are supported by compilations, but variability in the proportionality constant is difficult to capture at a global scale \citep{Lague2013a}.
 
 The $K$ in the dissolution rate constant in Equation \ref{eq:2} describes the dependence of the chemical weathering on climate:
 
@@ -230,7 +230,7 @@ $x(z)$ is the abundance profile of primary phases inside the regolith, varying w
     \label{fig:world_lithology}
 \end{figure}
 
-We restricted the calculation of the weathering fluxes to the flux of dissolved Ca+Mg originating from continental silicate weathering, as they are essential for the long-term consumption of atmospheric \COtwo through silicate weathering. To calculate this flux, we need to assign the concentration of Ca and Mg ($\chi_{CaMg}$) within the unweathered bedrock (Fig. \ref{fig:regolith_schematic}). Previous implementations of GEOCLIM have used a ``diffuse lithology'' where all exposed land is assigned the composition of bulk upper continental crust. Given that the hypothesis we seek to test involves the varying concentration of cations in different lithologies, the diffuse lithology approach cannot be used, and instead we have implemented a more realistic lithologically-resolved version of the model.
+We restricted the calculation of the weathering fluxes to the flux of dissolved Ca+Mg originating from continental silicate weathering, as they are essential for the long-term consumption of atmospheric \COtwo through silicate weathering. To calculate this flux, we need to assign the concentration of Ca and Mg ($\chi_{CaMg}$) within the unweathered bedrock (Fig. \ref{fig:regolith_schematic}). Previous implementations of GEOCLIM have used a ``diffuse lithology'' where all exposed land is assigned the composition of bulk upper continental crust. These previous studies assumed that the weathering rates of all rocks was the same for each continental grid element, provided that the grid element was submitted to the same climatic conditions. Given that the hypothesis we seek to test involves the varying concentration of cations in different lithologies, we instead implement a more realistic lithologically-resolved version of the model.
 
 The spatial distribution of lithologies is sourced from the Global Lithologic Map (GLiM) of \citet{Hartmann2012a}. The raw data takes the form of polygon vectors, where each polygon is assigned one of 16 lithologic categories. We first group these 16 categories into 6 broader categories (metamorphic, felsic, intermediate, mafic, carbonate, and siliciclastic sediment; Table \ref{tab:GLiM_to_GEOCLIM}). We then rasterize the polygon vectors to 0.1\degrees $\times$ 0.1\degrees resolution, where each pixel is assigned the lithologic category of the polygon that covers the greatest area in that pixel (i.e. the `mode lithology'; Fig. \ref{fig:world_lithology}). To improve the computing time of GEOCLIM, we decrease the resolution of the raster to 0.5\degrees $\times$ 0.5\degrees. To do so, a 3-dimensional 720 $\times$ 360 $\times$ 7 matrix is created, in which the fraction of each 0.5\degrees $\times$ 0.5\degrees pixel covered by each of the 6 lithologic categories (or water/ice) is captured by the extra dimension. In this way, we calculate an area-weighted mean Mg+Ca concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel.
 
@@ -290,7 +290,7 @@ Within the equations that govern the silicate weathering component of GEOCLIM, w
 \end{center}
 \end{table}
 
-We then compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff (UNH/GRDC Composite Runoff Fields V1.0; \citealp{Fekete1999a}), temperature (CRU TS v.4.03; \citealp{Harris2013a}), and slope (Shuttle Radar Topography Mission; \citealp{Farr2007a}) fields. As described in the main text, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin (HYBAM network) in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. The latter are nested watersheds, which requires upstream weathering fluxes to be subtracted from downstream fluxes. Watersheds for which this subtraction yields an aberrant value are not considered. 80 watersheds in total are used in this study. We calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins:
+We compute spatially-resolved long-term \COtwo consumption (i.e. Ca+Mg fluxes) using present-day runoff (UNH/GRDC Composite Runoff Fields V1.0; \citealp{Fekete1999a}), temperature (CRU TS v.4.03; \citealp{Harris2013a}), and slope (Shuttle Radar Topography Mission; \citealp{Farr2007a}) fields. As described in the main text, we then sum the computed \COtwo consumption over large-scale watersheds that appear in the global compilation of \citet{Gaillardet1999a}, as well as smaller-scale watersheds of the Amazon Basin (HYBAM network) in the compilation of \citet{Moquet2011a, Moquet2016a, Moquet2018a}. The latter are nested watersheds, which requires upstream weathering fluxes to be subtracted from downstream fluxes. Watersheds for which this subtraction yields an aberrant value are not considered. 80 watersheds in total are used in this study. We calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these basins:
 
 \begin{equation}
     r^{2} = 1 - \frac{\sum\left[ \log_{10}(M_{i}) - \log_{10}(O_{i}) \right]^{2}}{\sum\left[ \log_{10}(O_{i}) - \overline{\log_{10}(O)} \right]^{2}}
@@ -308,7 +308,7 @@ Each parameter combination predicts a different total \COtwo consumption that sh
 
 \section*{Climate Model}
 
-We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) for the climate model component of GEOCLIM. These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results. Given that precipitation in this region is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for SEAI. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
+For the climate model component of GEOCLIM, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results. Given that precipitation in this region is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water, the current approach is a reasonable approximation for SEAI. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable.
 
 \section*{SE Asian Islands Scenarios}
 
@@ -322,7 +322,7 @@ We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Manuscript/Figures/scenario_pCO2_all.pdf}
-    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the ten scenarios, each point represents an estimate from one of the 5,381 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched \COtwo consumption estimated from watershed data (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to the 2.5 and 97.5 percentile values. This figure is identical to Figure 2 in the main text, with the additional scenarios used to test the sensitivity of the results to the inclusion of Greenland and the Sunda Shelf.}
+    \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the ten scenarios, each point represents an estimate from one of the 5,381 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched \COtwo consumption estimated from watershed data (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to the 2.5 and 97.5 percentile values. This figure is identical to Figure 2 in the main text, with the additional scenarios used to test the sensitivity of the results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet.}
     \label{fig:scenario_pCO2_all}
 \end{figure}
 
@@ -333,11 +333,11 @@ We use temperature and runoff fields from a subset of the GFDL CM2.0 experiments
     \label{fig:paleogeographic_reconstructions}
 \end{figure}
 
-We use geological data to quantify the changes in the area of SEAI over the past 20~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed SEAI'' scenario (Fig. \ref{fig:SEAI_fracs}), we remove all land associated with arc-continent collision in SEAI. To generate the lithologic map used in the ``reduced SEAI + Sunda Shelf'' scenarios (Fig. \ref{fig:SEAI_fracs}), we take the estimated paleoshorelines of SEAI for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of SEAI for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. \ref{fig:paleogeographic_reconstructions}). We then add land that is not exposed today (i.e. the Sunda Shelf). However, the assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0038~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf.  For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation.
+We use geological data to quantify the changes in the area of SEAI over the past 20~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed SEAI'' scenario (Fig. \ref{fig:SEAI_fracs}), we remove all land associated with arc-continent collision in SEAI. To generate the lithologic map used in the ``paleo-SEAI'' scenarios (Fig. \ref{fig:SEAI_fracs}), we take the estimated paleoshorelines of SEAI for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of SEAI for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. \ref{fig:paleogeographic_reconstructions}). We then add land in the region that is not exposed today. The assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs do not appear in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0043~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf. For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation. For other minor islands in the region that were exposed 15, 10, or 5~m.y. ago but are currently submerged, we take the same approach as that described for the Sunda Shelf to generate the runoff field. For the slope and lithology, we take the mean slope and Ca+Mg concentrations from neighbouring pixels. We also remove the Greenland ice sheet in the ``paleo-SEAI'' scenarios, to be consistent with Northern Hemisphere ice sheets developing after 5~Ma \citep{Haug2005a}. The runoff field over Greenland is generated using the same method as that for the Sunda Shelf. For the slope, we take the mean slope value (0.0529~m/m) of land for which slope data exists around the edges of Greenland, and assign this value to all pixels of Greenland covered by the ice sheet. We also assign the Ca+Mg concentration of bulk continental crust to these pixels.
 
-To explore the sensitivity of our results to the inclusion of the Sunda Shelf, we also tested ``reduced SEAI'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``reduced SEAI + Sunda Shelf'' scenarios without the addition of the Sunda Shelf. We find that the estimated steady state \pCOtwo's for the ``reduced SEAI'' scenarios are only marginally higher than those of the ``reduced SEAI + Sunda Shelf'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are relatively insensitive to the inclusion of the Sunda Shelf. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the shelf.
+To explore the sensitivity of our results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet, we also tested ``paleo-SEAI - Greenland'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``paleo-SEAI'' scenarios without the removal of the Greenland ice sheet. We also tested ``paleo-SEAI - Greenland - Sunda Shelf'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``paleo-SEAI'' scenarios without the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet. We find that the estimated steady state \pCOtwo's for the ``paleo-SEAI - Greenland'' and ``paleo-SEAI - Greenland - Sunda Shelf'' scenarios are only marginally higher than those of the ``paleo-SEAI'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are relatively insensitive to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the Sunda Shelf, and the low runoff values at high latitudes.
 
-The decrease in \pCOtwo that we estimate associated with the emergence of SEAI since 5~Ma ($\sim$120~ppm) is greater than that proposed in \citet{Molnar2015a} ($\sim$19~ppm). This 19~ppm value in \citet{Molnar2015a} is obtained from an equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor $\alpha$ that is intended to account for the influence of both runoff and temperature (Equation 3 in \citealp{Molnar2015a}). \pCOtwo is then estimated from $T$ using a simple energy balance equation. However, as discussed in the main text, as \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo. The linear relationship used in \citet{Molnar2015a} ignores these feedbacks in the global climate system.
+The decrease in \pCOtwo that we estimate associated with the emergence of SEAI since 5~Ma (92--161~ppm; Fig. \ref{fig:scenario_pCO2_all}) is greater than that proposed in \citet{Molnar2015a} ($\sim$19~ppm). This 19~ppm value in \citet{Molnar2015a} is obtained from an equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor $\alpha$ that is intended to account for the influence of both runoff and temperature (Equation 3 in \citealp{Molnar2015a}). \pCOtwo is then estimated from $T$ using a simple energy balance equation. However, the relationship between mean global temperature and weathering-rate-weighted land area is not linear. Furthermore, as acknowledged by the authors themselves, this simple linear relationship ignores spatial variability in runoff, temperature, and slope, and only crudely accounts for spatial variability in lithology. In fact, the 19~ppm value estimated by \citet{Molnar2015a} is closer to the decrease in \pCOtwo that we estimate if mafic volcanics associated with the Deccan Traps (a relatively flat area outside of the warm and wet tropics) are replaced with the Ca+Mg concentration of bulk continental crust (21--81~ppm; Fig. \ref{fig:scenario_pCO2_all}). The significant difference in steady-state \pCOtwo estimated between the ``removed Deccan Traps'' scenario and the SEAI scenarios (Fig. \ref{fig:scenario_pCO2_all}) demonstrates that considering changes in the spatial distribution of lithologies alone is not adequate for estimating changes in steady-state \pCOtwo. Instead, spatially-varying runoff, temperature, and slope significantly modulates silicate weathering rates, and must be accounted for.
 
 \begin{figure}[h!]
     \centering
@@ -346,13 +346,13 @@ The decrease in \pCOtwo that we estimate associated with the emergence of SEAI s
     \label{fig:pCO2_proxies}
 \end{figure}
 
-Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:pCO2_proxies} \citep{Bereiter2015a, Foster2017a, Ji2018a}. Even when stringent quality criteria and the latest understanding of each of the \pCOtwo proxies have been applied to available \pCOtwo records, both significant uncertainty in the estimated \pCOtwo for any given data point as well as disagreement between techniques remain. Nevertheless, our modeled \pCOtwo values for 15~Ma (Fig. \ref{fig:scenario_pCO2_all}) resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene.
+Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:pCO2_proxies} \citep{Bereiter2015a, Foster2017a, Ji2018a}. Even when stringent quality criteria and the latest understanding of each of the \pCOtwo proxies have been applied to available \pCOtwo records, both significant uncertainty in the estimated \pCOtwo for any given data point as well as disagreement between techniques remain. Nevertheless, our modeled \pCOtwo values for 15~Ma (Fig. \ref{fig:scenario_pCO2_all}) resemble the higher end of proxy-based \pCOtwo estimates for the early-mid-Miocene. Given this scatter in the proxy-based \pCOtwo estimates, we instead infer the Neogene cooling trend from the Miocene benthic foram oxygen isotope record shown in Figure 1 in the main text.
 
 \section*{Paleoshoreline Reconstruction and Geological Synthesis}
 
-Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in SEAI. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$ (Fig. 1 in main text). We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citep{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries (i.e. Early Miocene = 23--16~Ma, Middle Miocene = 15.99--11.61~Ma, Late Miocene = 11.6--5.4~Ma, Pliocene =5.39--3.8 Ma) but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
+Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in SEAI. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$ (Fig. 1 in main text). We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citet{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries (i.e. Early Miocene = 23--16~Ma, Middle Miocene = 15.99--11.61~Ma, Late Miocene = 11.6--5.4~Ma, Pliocene =5.39--3.8 Ma) but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
 
-Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a}, and in New Guinea, we followed \citet{Gold2017a} and \cite{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5~Ma by \citet{Molnar2015a} our calculated area is comparable. 
+Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we followed the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a}, and in New Guinea, we followed \citet{Gold2017a} and \citet{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5~Ma by \citet{Molnar2015a} our calculated area is comparable. 
 
 \subsection*{Malay Peninsula and Sunda Shelf}
 
